# dolpa

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dolpa/: comparator.py  dolpa.py  dolpa_logger.py  dolpa_utils.py  exceptions.py
tests/: test.json  test_dolpa.py  test_utils.py
