[tool.poetry]
name = "dolpa"
version = "0.1.4"
description = "Simple and elegant framework for automating your API tests"
authors = ["ggautam <gpal.gtm@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ggautams/dolpa"
repository = "https://github.com/ggautams/dolpa"
documentation = "https://github.com/ggautams/dolpa/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
